--- a/src/AioCore.Hosted/AioCore.Web/wwwroot/index.html
+++ b/src/AioCore.Hosted/AioCore.Web/wwwroot/index.html
@@ -7,10 +7,12 @@
     <title>AioCore.Web</title>
     <base href="/" />
     <link href="AioCore.Web.styles.css" rel="stylesheet" />
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="app">Loading...</div>
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
