--- a/src/AioCore.Hosted/AioCore.Web/wwwroot/index.html
+++ b/src/AioCore.Hosted/AioCore.Web/wwwroot/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AioCore.Web</title>
     <base href="/" />
-    <link href="AioCore.Web.styles.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
+    <link href="AioCore.Web.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app" class="h-full">Loading...</div>
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
