--- a/src/AioCore.Hosted/AioCore.Web/wwwroot/index.html
+++ b/src/AioCore.Hosted/AioCore.Web/wwwroot/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AioCore.Web</title>
     <base href="/" />
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
-    <link href="AioCore.Web.styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="app">Loading...</div>
+    <script src="js/app.js"></script>
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
